favicon, update url assets

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
+
     <title>Google</title>
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
@@ -14,19 +17,19 @@
         <a class="nav-text" href="#">Gmail</a>
         <a class="nav-text" href="#">Images</a>
         <a class="points" href="#">
-            <img class="points-img" src="/assets/img/points.png">
+            <img class="points-img" src="assets/img/points.png">
         </a>
         <a class="points user-margin" href="https://github.com/matteotagliatti" target="_blank">
-            <img class="user-img" src="/assets/img/user-img.png">
+            <img class="user-img" src="assets/img/user-img.png">
         </a>
     </nav>
 
     <div class="search">
-        <img class="logo" src="/assets/img/google-logo.png">
+        <img class="logo" src="assets/img/google-logo.png">
         <div class="searchbar">
-            <img class="search-icon" src="/assets/img/search-icon.png">
+            <img class="search-icon" src="assets/img/search-icon.png">
             <input class="search-input" type="text">
-            <img class="microphone-icon" src="/assets/img/microphone-icon.png">
+            <img class="microphone-icon" src="assets/img/microphone-icon.png">
         </div>
         <div class="search-buttons">
             <input class="search-button" type="submit" value="Google Search"></input>
