--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Google</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <script>
+        function testJS() {
+            var b = document.getElementById('search').value,
+            url = 'http://path_to_your_html_files/next.html?search=' + encodeURIComponent(b);
+            document.location.href = url;
+        }
+    </script>
+
 </head>
 <body>
 
@@ -24,21 +33,23 @@
         </a>
     </nav>
 
-    <div class="search">
-        <img class="logo" src="assets/img/google-logo.png">
-        <div class="searchbar">
-            <img class="search-icon" src="assets/img/search-icon.png">
-            <input class="search-input" type="text">
-            <img class="microphone-icon" src="assets/img/microphone-icon.png">
+    <form action="search.html" method="GET">
+        <div class="search">
+            <img class="logo" src="assets/img/google-logo.png">
+            <div class="searchbar">
+                <img class="search-icon" src="assets/img/search-icon.png">
+                <input class="search-input" type="text" id="search" name="search">
+                <img class="microphone-icon" src="assets/img/microphone-icon.png">
+            </div>
+            <div class="search-buttons">
+                <input class="search-button" type="submit" value="Google Search"></input>
+                <a href="#"><button class="search-button">I'm Feeling Lucky</button></a>
+            </div>
+            <div class="lang">
+                <p>Google offered in: <a href="#">Italiano</a></p>
+            </div>
         </div>
-        <div class="search-buttons">
-            <input class="search-button" type="submit" value="Google Search"></input>
-            <a href="#"><button class="search-button">I'm Feeling Lucky</button></a>
-        </div>
-        <div class="lang">
-            <p>Google offered in: <a href="#">Italiano</a></p>
-        </div>
-    </div>
+    </form>
 
     <footer class="country">
         <div class="left">
