--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
     <footer class="footer">
         <div class="left">
-            <a class="footer-link" href="#">About</a>
+            <a class="footer-link mobile-padding" href="#">About</a>
             <a class="footer-link" href="#">Advertising</a>
             <a class="footer-link" href="#">Business</a>
-            <a class="footer-link" href="#">How Search works</a>
+            <a class="footer-link mobile-none" href="#">How Search works</a>
           </div>
           <div class="right">
             <a class="footer-link" href="#">Privacy</a>
