--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Pass data from index.html to search.html -->
     <script>
         function testJS() {
             var b = document.getElementById('search').value,
