input required, search.html media query

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <img class="logo" src="assets/img/google-logo.png">
             <div class="searchbar">
                 <img class="search-icon" src="assets/img/search-icon.png">
-                <input class="search-input" type="text" id="search" name="search">
+                <input class="search-input" type="text" id="search" name="search" required>
                 <img class="microphone-icon" src="assets/img/microphone-icon.png">
             </div>
             <div class="search-buttons">
