--- a/search.html
+++ b/search.html
@@ -44,7 +44,7 @@
                     <img class="search-icon" src="assets/img/searchresults-icon.png">
                 </div>
             </form>
-            <div class="nav search-icons">
+            <div class="nav search-icons search-mobile-none">
                 <a class="points" href="#">
                     <img class="gear-img" src="assets/img/gear.png">
                 </a>
@@ -66,7 +66,7 @@
                 <a href="#">News</a>
                 <a href="#">More</a>
             </div>
-            <div>
+            <div class="search-mobile-none">
                 <a href="#">Tools</a>
             </div>
         </nav>
